fixes, updated swagger.yaml
